--- a/src/app/workout-details/workout-details.component.html
+++ b/src/app/workout-details/workout-details.component.html
@@ -1,25 +1,17 @@
 <div class="p-4 md:p-8">
   <div class="flex space-x-4 mb-4">
-    <input
-      [(ngModel)]="searchTerm"
-      class="border p-2 rounded-md flex-1"
-      (input)="search()"
-      placeholder="Search"
-    />
-    <div class="flex-1">
-      <select
-        [(ngModel)]="selectedWorkoutType"
-        name="workoutTypes"
-        required
-        class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-        (change)="filter()"
-      >
-        <option disabled value="">Filter by Workout Type</option>
-        <option *ngFor="let workoutType of workoutTypes" [value]="workoutType">
+    <mat-form-field class="w-full" appearance="fill">
+      <mat-label>Search</mat-label>
+      <input matInput [(ngModel)]="searchTerm" (input)="search()" placeholder="Search">
+    </mat-form-field>
+    <mat-form-field class="w-full" appearance="fill">
+      <mat-label>Filter by Workout Type</mat-label>
+      <mat-select [(ngModel)]="selectedWorkoutType" (selectionChange)="filter()">
+        <mat-option *ngFor="let workoutType of workoutTypes" [value]="workoutType">
           {{ workoutType }}
-        </option>
-      </select>
-    </div>
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
   <!-- Workout Details Section -->
   <app-workout-table [users]="filteredUsers"></app-workout-table>
