made the echarts work for graph

--- a/src/app/workout-details/workout-table/workout-table.component.html
+++ b/src/app/workout-details/workout-table/workout-table.component.html
@@ -2,25 +2,25 @@
   <table mat-table [dataSource]="dataSource" class="custom-table" matSort>
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-header">Name</th>
+      <th mat-header-cell *matHeaderCellDef class="custom-header">Name</th>
       <td mat-cell *matCellDef="let row" class="custom-cell">{{ row.name }}</td>
     </ng-container>
 
     <!-- Workouts Column -->
     <ng-container matColumnDef="workouts">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-header">Workouts</th>
+      <th mat-header-cell *matHeaderCellDef class="custom-header">Workouts</th>
       <td mat-cell *matCellDef="let row" class="custom-cell">{{ row.workouts }}</td>
     </ng-container>
 
     <!-- Number Of Workouts Column -->
     <ng-container matColumnDef="numberOfWorkouts">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-header">Number Of Workouts</th>
+      <th mat-header-cell *matHeaderCellDef class="custom-header">Number Of Workouts</th>
       <td mat-cell *matCellDef="let row" class="custom-cell">{{ row.numberOfWorkouts }}</td>
     </ng-container>
 
     <!-- Total Workout Minutes Column -->
     <ng-container matColumnDef="totalWorkoutMinutes">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-header">Total Workout Minutes</th>
+      <th mat-header-cell *matHeaderCellDef class="custom-header">Total Workout Minutes</th>
       <td mat-cell *matCellDef="let row" class="custom-cell">{{ row.totalWorkoutMinutes }}</td>
     </ng-container>
 
@@ -37,7 +37,7 @@
 
   <mat-paginator
     [pageSizeOptions]="[5, 10, 25, 100]"
-    aria-label="Select page of users"
+    aria-label="Select page of getUsers()"
     class="custom-paginator"
   ></mat-paginator>
 </div>
