--- a/src/app/workout-tracker/workout-tracker.component.html
+++ b/src/app/workout-tracker/workout-tracker.component.html
@@ -58,10 +58,9 @@
 
     <button
       mat-raised-button
-      color="primary"
       type="submit"
-      class="w-full"
-      [disabled]="!workoutForm.form.valid"
+      class="w-full font-semibold custom-button"
+      (focus)="showSnackbarForAdd($event)"
     >
       Add Workout
     </button>
@@ -74,8 +73,7 @@
     </h3>
     <button
       mat-raised-button
-      color="primary"
-      class="w-full"
+      class="w-full font-semibold custom-button"
       (click)="navigateToWorkoutDetails()"
     >
       View Workout Details
